--- a/food network.html
+++ b/food network.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="shortcut icon" href="food icone2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="food">
+        <h1><span id="orange">Avoid </span> Diet, Just Eat Healthy With a Network Of Foods</h1>
+        <p>The key to a healthy diet is to keep the right amount of calories in your diet every day. This way you balance how much energy you are using and how much energy you are receiving. If you eat more food than your body needs, you will gain weight.Because, the energy that you are not using, will accumulate in the body in the form of excess fat. Again, even if you play very little, you will lose weight.</p>
+    </div>
 </body>
 </html>
