--- a/food network.html
+++ b/food network.html
@@ -8,14 +8,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
-    <link rel="shortcut icon" href="food icone2.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="img\food icone2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="food">
-        <h1><span id="orange">Avoid </span> Diet, Just Eat Healthy With a Network Of Foods</h1>
-        <p>The key to a healthy diet is to keep the right amount of calories in your diet every day. This way you balance how much energy you are using and how much energy you are receiving. If you eat more food than your body needs, you will gain weight.Because, the energy that you are not using, will accumulate in the body in the form of excess fat. Again, even if you play very little, you will lose weight.</p>
-    </div>
+    <section class="dutta-vag">
+        <div class="half-width">
+            <h1><span id="orange">Avoid </span> Diet, Just Eat Healthy With a Network Of Foods</h1>
+            <p>The key to a healthy diet is to keep the right amount of calories in your diet every day. This way you balance how much energy you are using and how much energy you are receiving. If you eat more food than your body needs, you will gain weight.Because, the energy that you are not using, will accumulate in the body in the form of excess fat. Again, even if you play very little, you will lose weight.</p>
+            <a class="link" target="blank" href="">Order Food</a>
+        </div>
+        <div class="half-width">
+            <img class="img" src="img\food eat.jpg" alt="FOOD IMG">
+        </div>
+        
+    </section >
+    <section class="dutta-vag "  >
+       <div class="bgimg">
+        <div class="half-width"  >
+            <img class="img-size" src="img\kisspng-eating-junk-food-hunger-fast-food-woman-eating-5b100f5d437345.6346499515277791652763-removebg-preview.png" alt=""> 
+         </div>
+         <div class="half-width add" >
+             <h1>About Me</h1>
+             <p>Are you more creative or better at HTML/CSS? Are you a good project manager or do you work better on a team that has someone responsible for project management? Nobody is good at everything. It is OK to have weaknesses as long as you are aware of them.</p>
+             <a class="link" target="blank" href="">Contact Me</a>
+         </div>
+       </div>
+    </section>
+<h1 class="blod">My Recipies</h1>
+<p class="blod"> consectetur adipisicing elit. corrupti optio nobis magni?</p>
+<section class="zad">
+
+    <div class="ddd"> <img src="img\1.jpg" alt=""></div>
+    <div class="aaa"><img src="img\2.png" alt=""></div>
+    <div class="bbb"><img src="img\3.jpg" alt=""></div>
+
+</section>
+    
 </body>
 </html>
