--- a/food network.html
+++ b/food network.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
     <title>food Network</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,14 +17,14 @@
             <a class="link" target="blank" href="">Order Food</a>
         </div>
         <div class="half-width">
-            <img class="img" src="img\food eat.jpg" alt="FOOD IMG">
+            <img class="img" src="img\food_eat.png" alt="FOOD IMG">
         </div>
         
     </section >
     <section class="dutta-vag "  >
        <div class="bgimg">
         <div class="half-width"  >
-            <img class="img-size" src="img\kisspng-eating-junk-food-hunger-fast-food-woman-eating-5b100f5d437345.6346499515277791652763-removebg-preview.png" alt=""> 
+            <img class="img-size" src="img\femal pic.png" alt=""> 
          </div>
          <div class="half-width add" >
              <h1>About Me</h1>
